<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="melvintk09@gmail.com">melvin</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rviz2</depend>
  <depend>ros2_launch_params</depend>
  <depend>xacro</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
